# cryptostream

./: .dockerignore  .envrc  .gitignore  .user.yml  Dockerfile  README.md  main.py  mock_trades_multisymbol_insert.sql  monitor_pubsub.py  pubsub_to_bq.py  pyproject.toml  requirements.txt  symbols_extract.py
cryptostream/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
cryptostream/macros/macros/: generate_schema_name.sql
cryptostream/models/gold/: gold_candles_closed_15m.sql  gold_candles_closed_1d.sql  gold_candles_closed_1h.sql  gold_candles_closed_1m.sql  gold_candles_closed_5m.sql  gold_orderbook_liquidity_1m.sql  gold_tickers_1m.sql  gold_tickers_latest.sql  gold_trades_ohlcv_15m.sql  gold_trades_ohlcv_1d.sql  gold_trades_ohlcv_1h.sql  gold_trades_ohlcv_1m.sql  gold_trades_ohlcv_5m.sql  schema.yml  trades_ohlcv_15m.sql  trades_ohlcv_1d.sql  trades_ohlcv_1h.sql  trades_ohlcv_1m.sql  trades_ohlcv_5m.sql
cryptostream/models/silver/: schema.yml  silver_candles.sql  silver_orderbook.sql  silver_tickers.sql  trades.sql
cryptostream/models/source/: sources.yml
cryptostream/models/staging/: schema.yml  (+4 more)
dags/: cryptostream_pipeline.py  cryptostream_tests.py
data/: mock_trades_multisymbol_insert.sql  ws_raw_mock.jsonl
scripts/: start_pipeline.sh  stop_pipeline.sh
support_readmes/: README_dbt_intermediate_and_mart_models.md  README_dbt_sources.md  README_dbt_test_and_materialization.md  README_github.md  README_setup_dbt.md
support_scripts/: job_config.zsh  mockdata.py  mockdata_alt.py  scheduler.zsh  start_dags.zsh  start_stop_dags.zsh  stop_dags.zsh
